--- a/src/main/resources/internationalization_en.properties
+++ b/src/main/resources/internationalization_en.properties
@@ -28,4 +28,6 @@ new.validatorMessage = Address must be longer than 5 characters
 confirm.title = Confirm | Order coffee
 confirm.confirm = Confirm
 confirm.chooseCoffee = Choose coffee
+confirm.date = Date
+confirm.ourOrders = Our orders
 
